--- a/pyscraper/templates/upload.html
+++ b/pyscraper/templates/upload.html
@@ -2,6 +2,6 @@
 <title>Upload Photo</title>
 <h1>Upload Photo</h1>
 <form method="POST" enctype="multipart/form-data">
-  <input type="file" name="file">
+  <input type="file" name="files" multiple>
   <input type="submit" value="Upload">
 </form>
